add error bars to budget

--- a/paper3/R4-budget.ipynb
+++ b/paper3/R4-budget.ipynb
@@ -18,6 +18,7 @@
     "import xarray as xr\n",
     "import pandas as pd\n",
     "from calendar import monthrange\n",
+    "from datetime import datetime\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib as mpl\n",
     "from matplotlib.ticker import (MultipleLocator, AutoMinorLocator)\n",
@@ -39,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,15 +263,16 @@
     "    \n",
     "    # Momentary contribution: moles / second (from moles / L / s --> moles / m3 / s --> moles / s)\n",
     "    # Mask is for the points associated with the specified region. \n",
-    "    priv    = np.ma.masked_where((tmask_surf < 0.1), dpb_priv)    * volume_masked[0,:,:] * 1e3\n",
-    "    riv     = np.ma.masked_where((tmask_surf < 0.1), dpb_riv)     * volume_masked[0,:,:] * 1e3\n",
-    "    sedice  = np.ma.masked_where((tmask_surf < 0.1), dpb_sedice)  * volume_masked[0,:,:] * 1e3\n",
-    "    atmdust = np.ma.masked_where((tmask_surf < 0.1), dpb_atmdust) * volume_masked[0,:,:] * 1e3\n",
-    "    atmbc   = np.ma.masked_where((tmask_surf < 0.1), dpb_atmbc)   * volume_masked[0,:,:] * 1e3\n",
-    "    icedust = np.ma.masked_where((tmask_surf < 0.1), dpb_icedust) * volume_masked[0,:,:] * 1e3\n",
-    "    icebc   = np.ma.masked_where((tmask_surf < 0.1), dpb_icebc)   * volume_masked[0,:,:] * 1e3\n",
+    "    priv    = np.ma.masked_where((tmask_surf < 0.1), dpb_priv)    * volume_month_masked[:,0,:,:] * 1e3\n",
+    "    riv     = np.ma.masked_where((tmask_surf < 0.1), dpb_riv)     * volume_month_masked[:,0,:,:] * 1e3\n",
+    "    sedice  = np.ma.masked_where((tmask_surf < 0.1), dpb_sedice)  * volume_month_masked[:,0,:,:] * 1e3\n",
+    "    atmdust = np.ma.masked_where((tmask_surf < 0.1), dpb_atmdust) * volume_month_masked[:,0,:,:] * 1e3\n",
+    "    atmbc   = np.ma.masked_where((tmask_surf < 0.1), dpb_atmbc)   * volume_month_masked[:,0,:,:] * 1e3\n",
+    "    icedust = np.ma.masked_where((tmask_surf < 0.1), dpb_icedust) * volume_month_masked[:,0,:,:] * 1e3\n",
+    "    icebc   = np.ma.masked_where((tmask_surf < 0.1), dpb_icebc)   * volume_month_masked[:,0,:,:] * 1e3\n",
     "    resus   = dpb_sed * volume_bottom * 1e3\n",
-    "    adsorp  = dpb_ads * volume_month_masked[:,:,:,:] * 1e3 #np.ma.masked_where((tmask_month < 0.1) , dpb_ads)    * volume_month_masked[:,:,:,:] * 1e3\n",
+    "#     adsorp  = dpb_ads * volume_month_masked[:,:,:,:] * 1e3 #np.ma.masked_where((tmask_month < 0.1) , dpb_ads)    * volume_month_masked[:,:,:,:] * 1e3\n",
+    "    adsorp  = np.ma.masked_where((tmask_month < 0.1) , dpb_ads)    * volume_month_masked[:,:,:,:] * 1e3\n",
     "    \n",
     "    # Yearly contribution to domain: moles / year (from moles / s / month --> moles / month --> moles / year)\n",
     "    total_yearly = {'atm_dust': np.zeros(12), 'atm_bc': np.zeros(12), 'ice_dust': np.zeros(12), 'ice_bc': np.zeros(12), \n",
@@ -296,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,15 +448,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l1 = 10; l2 = 2167-imin; \n",
-    "r1 = 0; r2 = 776-jmin;\n",
-    "\n",
-    "l3 = 0;  l4 = 1472-imin;\n",
-    "r3 = 0;  r4 = 303-jmin;\n",
-    "\n",
-    "l5 = 0; l6 = 1152-imin;\n",
-    "r5 = 446-jmin; r6 = 672-jmin;\n",
-    "\n",
     "ind_array = np.zeros(volume_month_masked.shape)\n",
     "ind_array[:,:,l1:l2,r1:r2] = 1 # include area within boundaries\n",
     "ind_array[:,:,l3:l4,r3:r4] = 0 # exclude Hudson bay boundary area\n",
@@ -467,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -540,16 +533,16 @@
       "----------------------------------------------------------------\n",
       "Total annual contribution of Pb [%]:\n",
       "-- Dissolved runoff                                     1.67    \n",
-      "-- Dissolved-particulate exchange runoff                37.95   \n",
-      "-- Sediment resuspension                                32.93   \n",
-      "-- Sediment released by sea ice                         5.93    \n",
+      "-- Dissolved-particulate exchange runoff                37.92   \n",
+      "-- Sediment resuspension                                32.92   \n",
+      "-- Sediment released by sea ice                         5.95    \n",
       "-- Natural aerosols released by sea ice                 0.98    \n",
-      "-- Anthropogenic aerosols released by sea ice           9.85    \n",
+      "-- Anthropogenic aerosols released by sea ice           9.87    \n",
       "-- Natural aerosol deposition                           0.40    \n",
       "-- Anthropogenic aerosol deposition                     10.29   \n",
       "----------------------------------------------------------------\n",
       "Average annual contribution of Pb [nanomol/m2/day]:    1.53    \n",
-      "Average annual removal of Pb [nanomol/m2/day]:         2.78    \n",
+      "Average annual removal of Pb [nanomol/m2/day]:         2.77    \n",
       "-- Dissolved runoff                                     0.03    \n",
       "-- Dissolved-particulate exchange runoff                0.58    \n",
       "-- Sediment resuspension                                0.50    \n",
@@ -567,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -646,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -657,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -729,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -762,6 +755,120 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_dissolpb(folder, year):\n",
+    "    dpb_array  = np.empty((12,50,isize,jsize));\n",
+    "    for i, month in enumerate(range(1,13)):\n",
+    "        file_name = f'ANHA12_EXH006_1m_{year}0101_{year}1231_comp_{year}{month:02}-{year}{month:02}.nc'\n",
+    "        with xr.open_dataset(folder+file_name) as file:\n",
+    "            dpb_array[i,:,:,:] = file['dissolpb'].values[0,:,:,:]\n",
+    "        \n",
+    "    return dpb_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2002\n",
+      "2003\n",
+      "2004\n",
+      "2005\n",
+      "2006\n",
+      "2007\n",
+      "2008\n",
+      "2009\n",
+      "2010\n",
+      "2011\n",
+      "2012\n",
+      "2013\n",
+      "2014\n",
+      "2015\n",
+      "2016\n",
+      "2017\n",
+      "2018\n",
+      "2019\n",
+      "2020\n",
+      "2021\n"
+     ]
+    }
+   ],
+   "source": [
+    "dpb_years = np.zeros((len(years),12))\n",
+    "# Load monthly dPb concentrations at start of time series (year 2002) and end (year 2021):\n",
+    "for n,year in enumerate(years): # moles\n",
+    "    print(year)\n",
+    "    dpb_years[n,:] = np.ma.sum((load_dissolpb(f'{folder_base}Pb-reference-{year}-202312/', year)*volume_month_masked2*1e3),\\\n",
+    "                               axis=(1,2,3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2002\n",
+      "2003\n",
+      "2004\n",
+      "2005\n",
+      "2006\n",
+      "2007\n",
+      "2008\n",
+      "2009\n",
+      "2010\n",
+      "2011\n",
+      "2012\n",
+      "2013\n",
+      "2014\n",
+      "2015\n",
+      "2016\n",
+      "2017\n",
+      "2018\n",
+      "2019\n",
+      "2020\n",
+      "2021\n"
+     ]
+    }
+   ],
+   "source": [
+    "timeseries_total_monthly    = {}\n",
+    "for ind, year in enumerate(years):\n",
+    "    print(year)\n",
+    "    total_yearly_bymonth = calculate_contribution_monthly(f'{folder_base}Pb-reference-{year}-202312/', year=year,\n",
+    "                                                          volume_masked=volume_masked2, volume_month_masked=volume_month_masked2,\n",
+    "                                                          volume_bottom=volume_bottom2)\n",
+    "    \n",
+    "    for key in total_yearly:\n",
+    "        if ind ==0:\n",
+    "            timeseries_total_monthly[key] = total_yearly_bymonth[key]\n",
+    "        else:\n",
+    "            timeseries_total_monthly[key] = np.append(timeseries_total_monthly[key], total_yearly_bymonth[key])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sources_monthly = np.array([timeseries_total_monthly[key] for key in keys]).sum(axis=0) \n",
+    "sinks_monthly   = timeseries_total_monthly['adsorp']"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -770,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -787,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -800,44 +907,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "32.24094093003774"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "interannual_wCB.mean()*100/(total*1e-6) + interannual_LS.mean()*100/(total*1e-6) - interannual_nCB.mean()*100/(total*1e-6)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "total   = sum([timeseries_total[key].mean() for key in keys]) + -interannual_nCB.mean()*1e6 \\\n",
-    "                -interannual_wCB.mean()*1e6 + interannual_LS.mean()*1e6"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "# add shading to background of plot with this range\n",
     "# could add it based on the annual amount off, or based on the cumulative amount or rolling amount (since it'll be weird if off by a month)\n",
-    "diff = (np.diff(dpb_years.flatten(), prepend=dpb_years[0,0])*1e-6) - (sources + transport_monthly.flatten() - sinks)*1e-6\n",
-    "error = np.abs([np.sum(diff[slice(12*i,12*i+12)]) for i in range(0,len(years))]) "
+    "diff = (np.diff(dpb_years.flatten(), prepend=dpb_years[0,0])*1e-6) - \\\n",
+    "        (sources_monthly + transport_monthly.flatten() - sinks_monthly)*1e-6\n",
+    "error = [np.sum(diff[slice(12*i,12*i+12)]) for i in range(0,len(years))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2002, -0.023073075967144238) (2003, 0.11666990785289862) (2004, -0.05750053426543368) (2005, -0.03849340957025035) (2006, 0.030746051398629404) (2007, 0.03846140912385755) (2008, 0.05744994332614455) (2009, -0.0571432541290634) (2010, 0.07756787193950211) (2011, 0.2341031543355663) (2012, 0.052405173185748846) (2013, 0.1539003786547674) (2014, 0.10572384043134107) (2015, 0.056089900691202385) (2016, 0.00034653241397819556) (2017, -0.07992412223970337) (2018, 0.045046479765388836) (2019, -0.01221827196898935) (2020, 0.12523378681985614) (2021, 0.09970133072133874)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(*zip(np.arange(2002,2022), error))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.8272480360010057"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(np.abs(error))*100/4"
    ]
   },
   {
@@ -913,12 +1028,15 @@
     "                -interannual_nCB*1e6 -interannual_wCB*1e6 + interannual_LS*1e6 +interannual_HB*1e6\n",
     "ax4.plot(years, timeseries_total['adsorp']*1e-6, linewidth=1.5, linestyle=(0,(2,1)), color='k', label = 'Sinks: Adsorptive removal')\n",
     "ax4.plot(years, total_plot*1e-6, linewidth=1.5, color='k', label = 'Sources: external and boundaries')\n",
+    "# fill area between lines:\n",
+    "ax4.fill_between(years, (total_plot*1e-6), (total_plot*1e-6)+error, color='gray', alpha=0.2)\n",
+    "ax4.fill_between(years, (timeseries_total['adsorp']*1e-6)-error, (timeseries_total['adsorp']*1e-6), color='gray', alpha=0.2)\n",
     "ax4.legend(loc=(0.01, 0.01), fontsize=7, frameon=False)\n",
     "    \n",
     "ax4.set_xlabel('Year', fontsize=8)\n",
     "ax2.set_ylim(-0.01, 1.1)\n",
-    "ax3.set_ylim(-0.05, 2.2)\n",
-    "ax4.set_ylim(3.0, 5.0)\n",
+    "ax3.set_ylim(-0.05, 2.4)\n",
+    "ax4.set_ylim(2.6, 5.2)\n",
     "for axis in [ax2, ax3, ax4]:\n",
     "    axis.set_xlim(2001.8,2019.2)\n",
     "    axis.xaxis.set_major_locator(MultipleLocator(2))\n",
@@ -942,31 +1060,7 @@
     "ax3.set_ylabel('dPb added (Mmol/yr)', fontsize=8)\n",
     "ax4.set_ylabel('dPb added and \\n removed (Mmol/yr)', fontsize=8)\n",
     "plt.tight_layout(h_pad=1)\n",
-    "\n",
-    "# fig.savefig('/ocean/brogalla/GEOTRACES/figures/Pb_202402/R4-budget.jpg', dpi=300, bbox_inches='tight')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([3.84170939, 4.35141246, 4.41447935, 4.50826976, 4.97265007,\n",
-       "       4.10093981, 3.67474003, 4.17513239, 4.29809772, 3.82094112,\n",
-       "       3.64421185, 3.86624463, 4.01515675, 3.47043006, 3.99293544,\n",
-       "       4.24944093, 4.45252425, 4.58328661, 3.89683402, 4.23292215])"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "total_plot*1e-6"
+    "fig.savefig('/ocean/brogalla/GEOTRACES/figures/Pb_202402/R4-budget.jpg', dpi=300, bbox_inches='tight')"
    ]
   },
   {
@@ -978,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
