--- a/paper3/animation-Atlantic-Jones.ipynb
+++ b/paper3/animation-Atlantic-Jones.ipynb
@@ -24,6 +24,7 @@
     "from datetime import datetime\n",
     "import imageio\n",
     "import glob\n",
+    "from constants import imin, imax, jmin, jmax, isize, jsize\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -50,12 +51,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# domain dimensions:\n",
-    "jmin, jmax = 159, 799\n",
-    "imin, imax = 1139, 2179\n",
-    "jsize=jmax-jmin\n",
-    "isize=imax-imin\n",
-    "\n",
     "# Resolution of grid cells to show in figure:\n",
     "grid_reso  = 10\n",
     "\n",
@@ -93,8 +88,8 @@
     "years  = np.arange(2012,2016,1) \n",
     "files1 = []; files2 = [];\n",
     "for year in years:\n",
-    "    folder1 = f'/data/brogalla/run_storage/Pb-reference-202303/Pb-reference-{year}_20230308/'\n",
-    "    folder2 = f'/data/brogalla/run_storage/Pb-reference-202303/Pb-Labrador-Sea-{year}_20230308/'\n",
+    "    folder1 = f'/data/brogalla/run_storage/Pb-reference-202312/Pb-reference-{year}-202312/'\n",
+    "    folder2 = f'/data/brogalla/run_storage/Pb-Labrador-202312/Pb-Labrador-{year}-202312/'\n",
     "        \n",
     "    files1 = np.append(files1, np.sort(glob.glob(f'{folder1}/ANHA12_EXH006_5d_*')))\n",
     "    files2 = np.append(files2, np.sort(glob.glob(f'{folder2}/ANHA12_EXH006_5d_*')))"
