--- a/paper3/animation-Atlantic.ipynb
+++ b/paper3/animation-Atlantic.ipynb
@@ -24,6 +24,7 @@
     "from datetime import datetime\n",
     "import imageio\n",
     "import glob\n",
+    "from constants import imin, imax, jmin, jmax, isize, jsize\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -41,12 +42,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# domain dimensions:\n",
-    "jmin, jmax = 159, 799\n",
-    "imin, imax = 1139, 2179\n",
-    "jsize=jmax-jmin\n",
-    "isize=imax-imin\n",
-    "\n",
     "# Resolution of grid cells to show in figure:\n",
     "grid_reso  = 10\n",
     "\n",
@@ -77,15 +72,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "years  = np.arange(2002,2010,1) \n",
+    "years  = np.arange(2015,2022,1) \n",
     "files1 = []; files2 = [];\n",
     "for year in years:\n",
-    "    folder1 = f'/data/brogalla/run_storage/Pb-reference-202303/Pb-reference-{year}_20230308/'\n",
-    "    folder2 = f'/data/brogalla/run_storage/Pb-reference-202303/Pb-Labrador-Sea-{year}_20230308/'\n",
+    "    folder1 = f'/data/brogalla/run_storage/Pb-reference-202312/Pb-reference-{year}-202312/'\n",
+    "    folder2 = f'/data/brogalla/run_storage/Pb-Labrador-202312/Pb-Labrador-{year}-202312/'\n",
     "        \n",
     "    files1 = np.append(files1, np.sort(glob.glob(f'{folder1}/ANHA12_EXH006_5d_*')))\n",
     "    files2 = np.append(files2, np.sort(glob.glob(f'{folder2}/ANHA12_EXH006_5d_*')))"
@@ -93,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,28 +150,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1245.2911"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "depth = 36 #10, 25, 30, 32\n",
-    "for n, date in enumerate(dates1):\n",
-    "    fig = plot_layer(files1[n], files2[n], n, layer=depth, vmin=0, vmax=0.01)    \n",
-    "    fig.savefig(f'/ocean/brogalla/GEOTRACES/figures/Pb/animation/Baffin-Bay-animation-z{depth}-tinyPb-{date[0:8]}.png', dpi=300)\n",
-    "    plt.close(fig)"
+    "mesh_depth[36]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for depth in [36]: #10, 25, 30, 32\n",
+    "    for n, date in enumerate(dates1):\n",
+    "        fig = plot_layer(files1[n], files2[n], n, layer=depth, vmin=0, vmax=0.01)    \n",
+    "        fig.savefig(f'/ocean/brogalla/GEOTRACES/figures/Pb_202402/animation/Baffin-Bay-animation-z{depth}-{date[0:8]}.png', dpi=300)\n",
+    "        plt.close(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "layer = 36\n",
     "\n",
     "#https://stackoverflow.com/questions/753190/programmatically-generate-video-or-animated-gif-in-python\n",
-    "filenames = np.sort(glob.glob(f'/ocean/brogalla/GEOTRACES/figures/Pb/animation/Baffin-Bay-animation-z{layer}-tinyPb-*'))\n",
-    "with imageio.get_writer(f'/ocean/brogalla/GEOTRACES/figures/Pb/animation/Baffin-Bay-z{layer}-tinyPb.mp4', \n",
+    "filenames = np.sort(glob.glob(f'/ocean/brogalla/GEOTRACES/figures/Pb_202402/animation/Baffin-Bay-animation-z{layer}-*'))\n",
+    "with imageio.get_writer(f'/ocean/brogalla/GEOTRACES/figures/Pb_202402/animation/Baffin-Bay-z{layer}.mp4', \n",
     "                        macro_block_size = None, fps=7, mode='I') as writer:\n",
     "    for filename in filenames:\n",
     "        image = imageio.imread(filename)\n",
