--- a/paper3/animation-cross-section.ipynb
+++ b/paper3/animation-cross-section.ipynb
@@ -23,6 +23,7 @@
     "import imageio\n",
     "from datetime import datetime\n",
     "import glob\n",
+    "from constants import imin, imax, jmin, jmax\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -40,10 +41,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# domain dimensions:\n",
-    "imin, imax = 1139, 2179\n",
-    "jmin, jmax = 159, 799\n",
-    "\n",
     "# transect coordinates:\n",
     "BB_coords = (1470,1471,515,670) # Baffin Bay\n",
     "DS_coords = (1320,1321,538,630) # Davis Strait (jet)"
@@ -117,11 +114,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "years  = np.arange(2010,2020,1) \n",
+    "years  = np.arange(2002,2022,1) \n",
     "files1 = []; files2 = []; files3 = [];\n",
     "for year in years:\n",
-    "    folder1 = f'/data/brogalla/run_storage/Pb-reference-202303/Pb-reference-{year}_20230308/'\n",
-    "    folder2 = f'/data/brogalla/run_storage/Pb-reference-202303/Pb-Labrador-Sea-{year}_20230308/'\n",
+    "    folder1 = f'/data/brogalla/run_storage/Pb-reference-202312/Pb-reference-{year}-202312/'\n",
+    "    folder2 = f'/data/brogalla/run_storage/Pb-Labrador-202312/Pb-Labrador-{year}-202312/'\n",
     "        \n",
     "    files1 = np.append(files1, np.sort(glob.glob(f'{folder1}/ANHA12_EXH006_5d_*')))\n",
     "    files2 = np.append(files2, np.sort(glob.glob(f'{folder2}/ANHA12_EXH006_5d_*')))\n",
