--- a/paper3/old/negative-concentrations.ipynb
+++ b/paper3/old/negative-concentrations.ipynb
@@ -2,14 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Investigate negative concentrations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,6 +23,7 @@
     "import cmocean\n",
     "import pickle\n",
     "import matplotlib\n",
+    "import glob\n",
     "import xarray as xr\n",
     "\n",
     "%matplotlib inline"
@@ -28,14 +31,16 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "#### Parameters:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,30 +78,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "folder1 = '/data/brogalla/run_storage/Pb-tuning-202210/Pb-tuning-202210-new-fill-particle0005-kscav10-MUSCL/'\n",
+    "folder1 = '/data/brogalla/run_storage/Pb-tuning-202210/Pb-tuning-202210-trcrad-TVD-0/'\n",
     "f1      = xr.open_dataset(f'{folder1}ANHA12_EXH006_5d_20150101_20151231_ptrc_T_20151227-20151231.nc')\n",
     "dpbf1   = f1['dissolpb'].values\n",
     "\n",
-    "folder2 = '/data/brogalla/run_storage/Pb-tuning-202210/Pb-tuning-202210-new-fill-particle0005-kscav10-MUSCL1/'\n",
-    "f2      = xr.open_dataset(f'{folder2}ANHA12_EXH006_5d_20150101_20151231_ptrc_T_20150116-20150120.nc')\n",
+    "folder2 = '/data/brogalla/run_storage/Pb-tuning-202210/Pb-tuning-202210-trcrad-TVD-1/'\n",
+    "f2      = xr.open_dataset(f'{folder2}ANHA12_EXH006_5d_20150101_20151231_ptrc_T_20150804-20150808.nc')\n",
     "dpbf2   = f2['dissolpb'].values\n",
     "\n",
-    "folder3 = '/data/brogalla/run_storage/Pb-tuning-202210/Pb-tuning-202210-new-fill-particle0005-kscav10/'\n",
-    "f3      = xr.open_dataset(f'{folder3}ANHA12_EXH006_5d_20150101_20151231_ptrc_T_20151227-20151231.nc')\n",
+    "folder3 = '/data/brogalla/run_storage/Pb-tuning-202210/Pb-tuning-202210-trcrad-MUSCL-0/'\n",
+    "f3      = xr.open_dataset(f'{folder3}ANHA12_EXH006_5d_20150101_20151231_ptrc_T_20151028-20151101.nc')\n",
     "dpbf3   = f3['dissolpb'].values\n",
     "\n",
-    "folder4 = '/data/brogalla/run_storage/Pb-tuning-202210/Pb-tuning-202210-new-fill-particle0005-kscav10-1/'\n",
-    "f4      = xr.open_dataset(f'{folder4}ANHA12_EXH006_5d_20150101_20151231_ptrc_T_20150116-20150120.nc')\n",
+    "folder4 = '/data/brogalla/run_storage/Pb-tuning-202210/Pb-tuning-202210-trcrad-MUSCL-1/'\n",
+    "f4      = xr.open_dataset(f'{folder4}ANHA12_EXH006_5d_20150101_20151231_ptrc_T_20151227-20151231.nc')\n",
     "dpbf4   = f4['dissolpb'].values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for file in np.sort(glob.glob(f'{folder4}ANHA12_EXH006_5d*')):\n",
+    "    f2  = xr.open_dataset(f'{file}')\n",
+    "    dpbf2 = f2['dissolpb'].values\n",
+    "    if (np.amin(dpbf2) < 0):\n",
+    "        print(f'negative value in {file}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -104,76 +122,9 @@
      "output_type": "stream",
      "text": [
       "0.0 []\n",
-      "-1.0640716e-13 [[  0  45 888 571]\n",
-      " [  0  45 889 571]\n",
-      " [  0  45 889 572]\n",
-      " [  0  45 889 573]\n",
-      " [  0  45 890 572]\n",
-      " [  0  45 890 573]\n",
-      " [  0  45 891 573]]\n",
-      "-8.9215026e-14 [[  0  19 832 132]\n",
-      " [  0  19 833 132]\n",
-      " [  0  19 833 133]\n",
-      " [  0  19 834 133]\n",
-      " [  0  19 834 134]\n",
-      " [  0  19 834 135]\n",
-      " [  0  19 834 136]\n",
-      " [  0  19 834 137]\n",
-      " [  0  19 834 138]\n",
-      " [  0  19 834 139]\n",
-      " [  0  19 835 135]\n",
-      " [  0  19 835 136]\n",
-      " [  0  19 835 137]\n",
-      " [  0  19 835 138]\n",
-      " [  0  19 835 139]\n",
-      " [  0  19 835 140]\n",
-      " [  0  19 836 140]\n",
-      " [  0  19 836 141]\n",
-      " [  0  19 836 142]\n",
-      " [  0  19 836 143]\n",
-      " [  0  19 836 144]\n",
-      " [  0  20 834 136]\n",
-      " [  0  20 834 137]]\n",
-      "-2.1556486e-13 [[  0  12 878 621]\n",
-      " [  0  12 879 621]\n",
-      " [  0  12 879 622]\n",
-      " [  0  12 880 621]\n",
-      " [  0  12 880 622]\n",
-      " [  0  13 877 621]\n",
-      " [  0  13 877 622]\n",
-      " [  0  13 878 622]\n",
-      " [  0  13 878 623]\n",
-      " [  0  13 878 624]\n",
-      " [  0  13 879 623]\n",
-      " [  0  13 879 624]\n",
-      " [  0  13 879 625]\n",
-      " [  0  13 880 624]\n",
-      " [  0  13 880 625]\n",
-      " [  0  18 800 524]\n",
-      " [  0  18 801 523]\n",
-      " [  0  18 801 524]\n",
-      " [  0  18 802 523]\n",
-      " [  0  18 803 523]\n",
-      " [  0  45 887 570]\n",
-      " [  0  45 887 571]\n",
-      " [  0  45 888 570]\n",
-      " [  0  45 888 571]\n",
-      " [  0  45 888 572]\n",
-      " [  0  45 889 571]\n",
-      " [  0  45 889 572]\n",
-      " [  0  45 889 573]\n",
-      " [  0  45 890 572]\n",
-      " [  0  45 890 573]\n",
-      " [  0  45 891 572]\n",
-      " [  0  45 891 573]\n",
-      " [  0  45 892 573]\n",
-      " [  0  45 894 573]\n",
-      " [  0  45 895 572]\n",
-      " [  0  45 895 573]\n",
-      " [  0  45 896 572]\n",
-      " [  0  45 896 573]\n",
-      " [  0  45 897 571]\n",
-      " [  0  45 897 572]]\n"
+      "0.0 []\n",
+      "0.0 []\n",
+      "0.0 []\n"
      ]
     }
    ],
